Change Log:
=============================
- DanbooruDownloader2021104
  - Fix Issue #243: update readme for sankaku login.
  - Fix Issue #250: prevent excessive blinking in batch job.
  - Add support to add multiple job in batch job (separate the tags with new line).
  - Fix Issue #251: always delete .!tmp files for batch job.
  - Fix Issue #249: add try/catch for each post in batch job.
  - Refactor batch job.

- DanbooruDownloader20210424
  - Issue #236: update cookie handling.
  - Update shimmie parser to resolve additional xhtml entities
  - Update #225: sankaku next param handler
  - Add custom exception for cloudflare

- DanbooruDownloader20201025
  - Fix Cookie Handling
  - Update &next= parameter handling for page > 25 for sankaku and general parser issue.
  - Add login type = CookieAlwaysAsk
    - This will ask for new cookie everytime you open the application (no need to edit the provider list everytime).
  - Update to .Net 4.6.1
  - Implement DB tracking and add option to skip if already downloaded before.

- DanbooruDownloader20191125
  - Fix Issue #191: fix encoding issue for sankaku and last post detection.

- DanbooruDownloader20181029
  - Fix Issue #146: Reduce memory usage when reparsing Sankaku post.

- DanbooruDownloader20180721
  - Implement #168: tag replacement if no valid tag.
  - Fix Issue #127: update user agent.
  - Fix Issue #172: Upgrade project to .Net 4.5 due to security reason (TLS1.2 support).
  - Update provider list, remove dead board and switch to https if possible.

- DanbooruDownloader20170922
  - Fix Issue #111: Fix sankaku batch download, append next parameter in the url based on last imageid.

- DanbooruDownloader20170906
  - Fix Issue #130: Fix Danbooru updating API to block loli/shota for non-gold account.
  - Fix Issue #133: Update Sankaku Parser to unescape the image url.
  - Update Sankaku Parser to replace space with '+' for building tag query.

- DanbooruDownloader20170808